--- a/profiles.html
+++ b/profiles.html
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--=== Site Name ===-->
-                <a class="site-name navbar-brand" href="#"><span>E</span>gret</a>
+                <a class="site-name navbar-brand" href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/index.html"><span>P</span>itch it!</a>
               </div>
 
               <!-- Main Navigation menu Starts -->
@@ -105,7 +105,7 @@
           </div>
 
           <div class="pagehead">
-            <h3>Browse the latest pitches</h3>
+            <h3>Network with other Creatives</h3>
             <br>
           </div>
 
@@ -114,8 +114,8 @@
 
 
 
-        <div class="pitchContainer">
-          <ul class="pitches list-group">
+        <div class="creativesContainer">
+          <ul class="creatives list-group">
 
           </ul>
 
@@ -155,7 +155,7 @@
   			<div class="row">
   				<div class="col-lg-12">
   					<h4 class="footer-title"><!-- Footer Title -->
-  						<a class="site-name" href="#"><span>E</span>gret</a>
+  						<a class="site-name" href="#"><span>P</span>itchit</a>
   					</h4>
 
   					<!-- Social Links -->
@@ -205,7 +205,7 @@
 
   // Step ONE: Query the HTML Document for the container element(s) you're going to fill up:
 
-  const pitches = document.querySelector('.pitches');
+  const creatives = document.querySelector('.creatives');
 
   // Step TWO: Setup your URL variables that takes the link you're trying to go to + the parameters + the api key
 
@@ -213,36 +213,37 @@
 
   // Make a variable for all your DB tables, and add the key for ease
   const pitchTable = 'Pitch?api_key=keykq5utBcEomH4eD'
-  const creativeTable = 'Creatives?api_key=keykq5utBcEomH4eD'
+  const creativesTable = 'Creatives?api_key=keykq5utBcEomH4eD'
   let pitchData;
   // Make variables for the parameters you want to use, if you want to keep track of them or access them easier
-  let params = '&maxRecords=9&view=Grid%20view'
+  let params = 'Creatives/recVhUm8qECLbVFu8'
 
   // Make the API Call with FETCH! Make sure you "ADD" all the url pieces you need
-  var getData = fetch(base_url+pitchTable+params)
+  var getData = fetch(base_url+creativesTable)
     .then(data => data.json())
     .then(data => {
       console.log(data);
-      pitchData = data;
+      creativeData = data;
+
       // this is where you do things to your data!
 
-      pitches.innerHTML = pitchData.records.map((pitch)=>{
-        if (pitch.fields.Attachments[0].url) {
+      creatives.innerHTML = creativeData.records.map((creative)=>{
+
 
           return(
-//es6 code
+
                 `<li class='list-grouped-item panel panel-default'>
-                <img src='${pitch.fields.Attachments[0].url}'/>
-                <h3 class='pitchContent'>${pitch.fields["Project name"]}</h2>
-                <h6 class='pitchContent'>${pitch.fields.Creator}</h6>
-                <h5 class='pitchContent '><span class="label label-default">${pitch.fields.Genre}</span></h5>
-                <p class='pitchContent'>${pitch.fields["Log Line"]}</p>
-                <p class='pitchContent'><b>Open Positions:</b><br>${pitch.fields.Positions}</p>
+                <img src='${creative.fields["Profile Picture"][0].thumbnails.large.url}'/>
+                <img src='${creative.fields.Attachments[0].thumbnails.small.url}'/>
+                <h3 class='creativesContent'>${creative.fields.Name}</h3>
+                <p class='creativesContent'><span class="label label-default">${creative.fields.Profession}</span></p>
+                <p class='creativesContent'>${creative.fields.Bio}</p>
+
                 </li>`
 
           )
 
-        }
+
 
 
       }).join('')
