--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="icon-bar"></span>
 							</button>
 							<!--=== Site Name ===-->
-							<a class="site-name navbar-brand" href="#"><span>P</span>itchit</a>
+							<a class="site-name navbar-brand" href="anomaly0991.github.io/index.html"><span>P</span>itchit</a>
 						</div>
 
 						<!-- Main Navigation menu Starts -->
@@ -724,7 +724,7 @@
 							<li><span class="color-scheme fa fa-close"></span>Post film screenings</li>
 						</ul>
 						<div class="sign-up">
-							<a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/signup.html" class="fancy-button button-line btn-col zoom">
+							<a href="anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col zoom">
 								Sign up
 								<span class="icon">
 									<i class="fa fa-thumbs-o-up"></i>
@@ -761,7 +761,7 @@
 							<li><span class="color-scheme fa fa-close"></span>Post film screenings</li>
 						</ul>
 						<div class="sign-up">
-							<a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/signup.html" class="fancy-button button-line btn-col vertical">
+							<a href="anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col vertical">
 								Sign up
 								<span class="icon">
 									<i class="fa fa-hand-o-up"></i>
@@ -797,7 +797,7 @@
 							<li><span class="color-scheme fa fa-close"></span>List jobs</li>
 						</ul>
 						<div class="sign-up">
-							<a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/signup.html" class="fancy-button button-line btn-col rotate">
+							<a href="anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col rotate">
 								Sign up
 								<span class="icon">
 									<i class="fa fa-thumbs-o-up"></i>
@@ -833,7 +833,7 @@
 							<li><span class="color-scheme fa fa-check"></span>Screen Share</li>
 						</ul>
 						<div class="sign-up">
-							<a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/signup.html" class="fancy-button button-line btn-col zoom">
+							<a href="anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col zoom">
 								Sign up
 								<span class="icon">
 									<i class="fa fa-thumbs-o-up"></i>
