--- a/profiles.html
+++ b/profiles.html
@@ -62,9 +62,9 @@
               <!-- Main Navigation menu Starts -->
               <div class="collapse navbar-collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="current"><a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/index.html">Home</a></li>
-                  <li><a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/profiles.html">Network</a></li>
-                  <li><a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/pitchtable.html">Pitch</a></li>
+                  <li class="current"><a href="anomaly0991.github.io/signup.html/index.html">Home</a></li>
+                  <li><a href="anomaly0991.github.io/signup.html/profiles.html">Network</a></li>
+                  <li><a href="anomaly0991.github.io/signup.html/pitchtable.html">Pitch</a></li>
                   <li><a href="#section-feature">Stream</a></li>
                   <li><a href="#section-screenshots">Search</a></li>
                   <li>
