--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
 							<li><span class="color-scheme fa fa-close"></span>Post film screenings</li>
 						</ul>
 						<div class="sign-up">
-							<a href="anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col zoom">
+							<a href="anomaly0991/anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col zoom">
 								Sign up
 								<span class="icon">
 									<i class="fa fa-thumbs-o-up"></i>
@@ -797,7 +797,7 @@
 							<li><span class="color-scheme fa fa-close"></span>List jobs</li>
 						</ul>
 						<div class="sign-up">
-							<a href="anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col rotate">
+							<a href="MyThinkLaunch/anomaly0991.github.io/signup.html" class="fancy-button button-line btn-col rotate">
 								Sign up
 								<span class="icon">
 									<i class="fa fa-thumbs-o-up"></i>
