--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
                   <span class="icon-bar"></span>
               </button>
               <!--=== Site Name ===-->
-              <a class="site-name navbar-brand" href="#"><span>P</span>itchit</a>
+              <a class="site-name navbar-brand" href="anomaly0991.github.io/index.html"><span>P</span>itchit</a>
             </div>
 
             <!-- Main Navigation menu Starts -->
@@ -147,7 +147,7 @@
   			<div class="row">
   				<div class="col-lg-12">
   					<h4 class="footer-title"><!-- Footer Title -->
-  						<a class="site-name" href="#"><span>P</span>itchit</a>
+  						<a class="site-name" href="anomaly0991.github.io/index.html"><span>P</span>itchit</a>
   					</h4>
 
   					<!-- Social Links -->
