--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
                   <span class="icon-bar"></span>
               </button>
               <!--=== Site Name ===-->
-              <a class="site-name navbar-brand" href="anomaly0991.github.io/index.html"><span>P</span>itchit</a>
+              <a class="site-name navbar-brand" href="index.html"><span>P</span>itchit</a>
             </div>
 
             <!-- Main Navigation menu Starts -->
