--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="icon-bar"></span>
 							</button>
 							<!--=== Site Name ===-->
-							<a class="site-name navbar-brand" href="anomaly0991.github.io/index.html"><span>P</span>itchit</a>
+							<a class="site-name navbar-brand" href="anomaly0991.github.io"><span>P</span>itchit</a>
 						</div>
 
 						<!-- Main Navigation menu Starts -->
