--- a/signup.html
+++ b/signup.html
@@ -67,13 +67,11 @@
             <!-- Main Navigation menu Starts -->
             <div class="collapse navbar-collapse navbar-responsive-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="current"><a href="#header">Home</a></li>
-                <li><a href="#step-1">Mission</a></li>
-                <li><a href="#section-services">Services</a></li>
-                <li><a href="#section-feature">Featured</a></li>
-                <li><a href="#section-screenshots">Screenshots</a></li>
-                <li><a href="#section-pricing">Pricing</a></li>
-                <li><a href="#section-download">Download</a></li>
+								<li class="current"><a href="anomaly0991.github.io/signup.html/index.html">Home</a></li>
+								<li><a href="anomaly0991.github.io/signup.html/profiles.html">Network</a></li>
+								<li><a href="anomaly0991.github.io/signup.html/pitchtable.html">Pitch</a></li>
+								<li><a href="#section-feature">Stream</a></li>
+								<li><a href="#section-screenshots">Search</a></li>
               </ul>
             </div>
             <!-- Main Navigation menu ends-->
