--- a/signup.html
+++ b/signup.html
@@ -67,7 +67,7 @@
             <!-- Main Navigation menu Starts -->
             <div class="collapse navbar-collapse navbar-responsive-collapse">
               <ul class="nav navbar-nav navbar-right">
-								<li class="current"><a href="anomaly0991.github.io/signup.html/index.html">Home</a></li>
+								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="anomaly0991.github.io/signup.html/profiles.html">Network</a></li>
 								<li><a href="anomaly0991.github.io/signup.html/pitchtable.html">Pitch</a></li>
 								<li><a href="#section-feature">Stream</a></li>
