--- a/signup.html
+++ b/signup.html
@@ -61,13 +61,13 @@
                   <span class="icon-bar"></span>
               </button>
               <!--=== Site Name ===-->
-              <a class="site-name navbar-brand" href="anomaly0991.github.io/index.html"><span>P</span>itchit</a>
+              <a class="site-name navbar-brand" href="index.html"><span>P</span>itchit</a>
             </div>
 
             <!-- Main Navigation menu Starts -->
             <div class="collapse navbar-collapse navbar-responsive-collapse">
               <ul class="nav navbar-nav navbar-right">
-								<li class="current"><a href="index.html">Home</a></li>
+								<li class="current"><a href="anomaly0991.github.io/signup.html/index.html">Home</a></li>
 								<li><a href="anomaly0991.github.io/signup.html/profiles.html">Network</a></li>
 								<li><a href="anomaly0991.github.io/signup.html/pitchtable.html">Pitch</a></li>
 								<li><a href="#section-feature">Stream</a></li>
