--- a/pitchtable.html
+++ b/pitchtable.html
@@ -62,9 +62,9 @@
               <!-- Main Navigation menu Starts -->
               <div class="collapse navbar-collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="current"><a href="anomaly0991.github.io/signup.html/index.html">Home</a></li>
-                  <li><a href="anomaly0991.github.io/signup.html/profiles.html">Network</a></li>
-                  <li><a href="anomaly0991.github.io/signup.html/pitchtable.html">Pitch</a></li>
+                  <li class="current"><a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/index.html">Home</a></li>
+                  <li><a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/profiles.html">Network</a></li>
+                  <li><a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/pitchtable.html">Pitch</a></li>
                   <li><a href="#section-feature">Stream</a></li>
                   <li><a href="#section-screenshots">Search</a></li>
                   <li>
@@ -231,13 +231,22 @@
 
           return(
 //es6 code
-                `<li class='list-grouped-item panel panel-default'>
-                <img src='${pitch.fields.Attachments[0].url}'/>
+                `<li class='list-grouped-item panel panel-default col-sm-3 pitchsize'>
+                <img src='${pitch.fields.Attachments[0].url}'class="pitchImage"/>
                 <h3 class='pitchContent'>${pitch.fields["Project name"]}</h2>
                 <h6 class='pitchContent'>${pitch.fields.Creator}</h6>
                 <h5 class='pitchContent '><span class="label label-default">${pitch.fields.Genre}</span></h5>
-                <p class='pitchContent'>${pitch.fields["Log Line"]}</p>
-                <p class='pitchContent'><b>Open Positions:</b><br>${pitch.fields.Positions}</p>
+                <div class="pitchInfo">
+                  <p class='pitchContent'>${pitch.fields["Log Line"]}</p>
+                  <p class='pitchContent'><b>Open Positions:</b><br>${pitch.fields.Positions}</p>
+                  </div>
+                  <a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/pitchpage.html?id=${pitch.id}" class="fancy-button button-line btn-col small vertical">
+
+                  More info..
+                  <span class="icon">
+                    <i class="fa fa-leaf"></i>
+                  </span>
+                </a>
                 </li>`
 
           )
