--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<p class="intro-message">Recruit for your film or network with other creative professionals </p>
 
 						<div class="home-buttons">
-							<a href="#" class="fancy-button button-line button-white vertical">
+							<a href="anomaly0991.github.io/pitchtable.html" class="fancy-button button-line button-white vertical">
 								Pitch your project
 								<span class="icon">
 									<i class="fa fa-gear"></i>
