--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 						<p class="intro-message">Recruit for your film or network with other creative professionals </p>
 
 						<div class="home-buttons">
-							<a href="anomaly0991.github.io/pitchtable.html" class="fancy-button button-line button-white vertical">
+							<a href="pitchtable.html" class="fancy-button button-line button-white vertical">
 								Pitch your project
 								<span class="icon">
 									<i class="fa fa-gear"></i>
 								</span>
 							</a>
-							<a href="#" class="fancy-button button-line button-white zoom">
-								Stream
+							<a href="profiles.html" class="fancy-button button-line button-white zoom">
+								Network
 								<span class="icon">
 									<i class="fa fa-leaf"></i>
 								</span>
@@ -242,6 +242,7 @@
 
 
 	<!--=== Features section Starts ===-->
+<!--
 	<section id="section-feature" class="feature-wrap">
 		<div class="container features center">
 			<div class="row">
@@ -411,7 +412,7 @@
 		</div>
 	</section>
 	<!--=== Features section Ends ===-->
-
+===-->
 
 
 
