--- a/index.html
+++ b/index.html
@@ -242,19 +242,18 @@
 
 
 	<!--=== Features section Starts ===-->
-<!--===
 	<section id="section-feature" class="feature-wrap">
 		<div class="container features center">
 			<div class="row">
 				<div class="col-lg-12">
 						<!--Features container Starts -->
-	<!--					<ul id="card-ul" class="features-hold baraja-container">
+						<ul id="card-ul" class="features-hold baraja-container">
 							<div><h3>Featured profiles</h3></div>
 
 							<!-- Single Feature Starts -->
-		<!--					<li class="single-feature" title="Card style">
+							<li class="single-feature" title="Card style">
 								<img src="images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--							<h4 class="feature-title color-scheme">Card style</h4>
+								<h4 class="feature-title color-scheme">Card style</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
 								</p>
@@ -270,9 +269,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-	<!--						<li class="single-feature" title="50+ SVG Icon included">
+							<li class="single-feature" title="50+ SVG Icon included">
 								<img src="images/2.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--							<h4 class="feature-title color-scheme">50+ SVG Icon included</h4>
+								<h4 class="feature-title color-scheme">50+ SVG Icon included</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -286,9 +285,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-	<!--						<li class="single-feature" title="MailChimp Ready">
+							<li class="single-feature" title="MailChimp Ready">
 								<img src="images/3.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--							<h4 class="feature-title color-scheme">MailChimp Ready</h4>
+								<h4 class="feature-title color-scheme">MailChimp Ready</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -302,9 +301,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-	<!--						<li class="single-feature" title="4 home style">
+							<li class="single-feature" title="4 home style">
 								<img src="images/4.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--								<h4 class="feature-title color-scheme">4 home style</h4>
+								<h4 class="feature-title color-scheme">4 home style</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -318,9 +317,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-<!--								<li class="single-feature" title="Parallax Backgrounds">
+							<li class="single-feature" title="Parallax Backgrounds">
 								<img src="images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--								<h4 class="feature-title color-scheme">Parallax Backgrounds</h4>
+								<h4 class="feature-title color-scheme">Parallax Backgrounds</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -334,9 +333,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-		<!--						<li class="single-feature" title="Ajax contact form">
+							<li class="single-feature" title="Ajax contact form">
 								<img src="images/6.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--								<h4 class="feature-title color-scheme">Ajax contact form</h4>
+								<h4 class="feature-title color-scheme">Ajax contact form</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -350,9 +349,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-	<!--							<li class="single-feature" title="unlimited Google fonts">
+							<li class="single-feature" title="unlimited Google fonts">
 								<img src="images/7.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--								<h4 class="feature-title color-scheme">unlimited Google fonts</h4>
+								<h4 class="feature-title color-scheme">unlimited Google fonts</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -366,9 +365,9 @@
 							<!-- Single Feature Ends -->
 
 							<!-- Single Feature Starts -->
-		<!--						<li class="single-feature" title="Feature heading">
+							<li class="single-feature" title="Feature heading">
 								<img src="images/8.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-	<!--								<h4 class="feature-title color-scheme">Feature heading</h4>
+								<h4 class="feature-title color-scheme">Feature heading</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -380,11 +379,11 @@
 								</a>
 							</li>
 							<!-- Single Feature Ends -->
-	<!--						</ul>
+						</ul>
 						<!--Features container Ends -->
 
 						<!-- Features Controls Starts -->
-		<!--					<div class="features-control relative">
+						<div class="features-control relative">
 							<button class="control-icon fancy-button button-line no-text btn-col bell" id="feature-prev" title="Previous" >
 								<span class="icon">
 									<i class="fa fa-arrow-left"></i>
@@ -407,13 +406,12 @@
 							</button>
 						</div>
 						<!-- Features Controls Ends -->
-<!--					</div>
+				</div>
 			</div>
 		</div>
 	</section>
--->
 	<!--=== Features section Ends ===-->
-===-->
+
 
 
 
