--- a/pitchtable.html
+++ b/pitchtable.html
@@ -240,7 +240,7 @@
                   <p class='pitchContent'>${pitch.fields["Log Line"]}</p>
                   <p class='pitchContent'><b>Open Positions:</b><br>${pitch.fields.Positions}</p>
                   </div>
-                  <a href="/Users/Amber/Desktop/MyThinkLaunch/pitch/bootstrap/egret/pitchpage.html?id=${pitch.id}" class="fancy-button button-line btn-col small vertical">
+                  <a href="pitchpage.html?id=${pitch.id}" class="fancy-button button-line btn-col small vertical">
 
                   More info..
                   <span class="icon">
