--- a/pitchpage.html
+++ b/pitchpage.html
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--=== Site Name ===-->
-                <a class="site-name navbar-brand" href="#"><span>E</span>gret</a>
+                <a class="site-name navbar-brand" href="#"><span>p</span>itchit</a>
               </div>
 
               <!-- Main Navigation menu Starts -->
