--- a/pitchtable.html
+++ b/pitchtable.html
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--=== Site Name ===-->
-                <a class="site-name navbar-brand" href="#"><span>E</span>gret</a>
+                <a class="site-name navbar-brand" href="#"><span>P</span>itchit</a>
               </div>
 
               <!-- Main Navigation menu Starts -->
